--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="row">
       <div class="col-8">
-        <h1 class="mb-4">Mark Suan - <small>a product designer<br> with a focus on UI & UX design.</small></h1>
+        <h1 class="mb-4">Mark Suan - <small>a great product designer<br> with a focus on UI & UX design.</small></h1>
       </div>
     </div>
 
