--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="nav-wrapper">
                     <ul>
                           <li class="lead"><a href="aboutme.html">About</a></li>
-                          <li class="lead"><a href="#">Resume</a></li>
+                          <li class="lead"><a href="Mark Suan -Product Design Resume">Resume</a></li>
                           <li class="lead"><a href="#">Contact</a></li>
                     </ul>
               </div>
@@ -60,7 +60,7 @@
 
     <div class="row mb-5">
       <div class="col-8">
-        <h4 class="lead">You can find me on <a href="https://medium.com/@marksuandesign">Medium</a> & <a href="https://dribbble.com/marksuandesigner">Dribble</a>, download my<br><a href="">resume</a>, or shoot me an <a href=mailto: mxsuan@gmail.com>email</a>.</small></h4>
+        <h4 class="lead">You can find me on <a href="https://medium.com/@marksuandesign">Medium</a> & <a href="https://dribbble.com/marksuandesigner">Dribble</a>, download my<br><a href="Mark Suan -Product Design Resume.pdf">resume</a>, or shoot me an <a href=mailto: mxsuan@gmail.com>email</a>.</small></h4>
       </div>
     </div>
 
