--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
                 <div class="nav-wrapper">
                       <ul>
                             <li class="lead"><a href="aboutme.html">About</a></li>
-                            <li class="lead"><a href="Mark Suan -Product Design Resume">Resume</a></li>
+                            <li class="lead"><a href="Mark Suan -Product Design Resume.pdf">Resume</a></li>
                             <li class="lead"><a href="#">Contact</a></li>
                       </ul>
                 </div>
