--- a/aboutme.html
+++ b/aboutme.html
@@ -105,7 +105,7 @@
                 <a href="https://medium.com/@marksuandesign"><img src="images/icons/contact_medium.png" class="img-fluid" width="30"></img></a>
               </div>
               <div class="col-2t text-center">
-                <a href=mailto: mxsuan@gmail.com><img src="images/icons/contact_mail.png" class="img-fluid" width="30"></img></a>
+                <a href="mailto: mxsuan@gmail.com"><img src="images/icons/contact_mail.png" class="img-fluid" width="30"></img></a>
               </div>
               <div class="col-2 text-center">
                 <a href="https://linkedin.com/in/marksuan"><img src="images/icons/LI_index_black.png" class="img-fluid" width="30"></img>
