--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="row mb-5">
       <div class="col-8">
-        <h4 class="lead">You can find me on <a href="https://medium.com/@marksuandesign">Medium</a> & <a href="https://dribbble.com/marksuandesigner">Dribble</a>, download my<br><a href="Mark Suan -Product Design Resume.pdf">resume</a>, or shoot me an <a href=mailto: mxsuan@gmail.com>email</a>.</small></h4>
+        <h4 class="lead">You can find me on <a href="https://medium.com/@marksuandesign">Medium</a> & <a href="https://dribbble.com/marksuandesigner">Dribble</a>, download my<br><a href="Mark Suan -Product Design Resume.pdf">resume</a>, or shoot me an <a href= "mailto: mxsuan@gmail.com">email</a>.</small></h4>
       </div>
     </div>
 
@@ -124,7 +124,7 @@
               <a href="https://medium.com/@marksuandesign"><img src="images/icons/contact_medium.png" class="img-fluid" width="30"></img></a>
             </div>
             <div class="col-2t text-center">
-              <a href=mailto: mxsuan@gmail.com><img src="images/icons/contact_mail.png" class="img-fluid" width="30"></img></a>
+              <a href="mailto: mxsuan@gmail.com"><img src="images/icons/contact_mail.png" class="img-fluid" width="30"></img></a>
             </div>
             <div class="col-2 text-center">
               <a href="https://linkedin.com/in/marksuan"><img src="images/icons/LI_index_black.png" class="img-fluid" width="30"></img>
