--- a/aboutme.html
+++ b/aboutme.html
@@ -62,19 +62,19 @@
 
         <div class="col-5 float-left">
           <p class="lead">
-            Being an Electrical & BioMedical engineering graduate from McMaster University, people often ask why I went into UX & Product Design.
+            Being an Electrical & BioMedical Engineering graduate from McMaster University, people often ask why I went into UX & Product Design.
           </p>
           <p class="lead">
-            Well throughout my time as a student,I've always been artistically inclined. UX design allows me to appreciate my technical development background (I still code for fun) while flex my artistic and creative abilities.</p>
+            Well simply put, as a student I was always an art junky pushing through an engineering degree.rom dancing on McMaster University's competitive Hip-Hop Team (I still dance as well), to designing my own clothing line, I was always trying to curb the creative side of myself. </p>
 
           <p class="lead">
-            From dancing on McMaster University's comeptitive Hip-Hop Team (I still dance as well), to designing my own brand and clothing line, art and design continue to help me interpret and experience the world around me.
-
+            UX Research + Product design allowed me to appreciate my technical background while still flexing my artistic and creative abilities. I'm a huge typography & color theory nerd and love researching new UI layouts and flows!
           </p>
 
           <p class="lead">
-             But more so, these mediums help me authentically convey my emotion, describe my circumstance and tell my story. I hope through my design I can help tell yours as well.
+             With a good understanding of the full stack developement cycle, I enjoy the challenge of balancing effective and lean design with a layput which is actionable & feasible. Hopefully I can help bring your product to life in both a aesthetic & effective manner!
           </p>
+
 
 
         </div>
