--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
 
       <div class="row">
         <div class="col-8 offset-1">
-          <h1 class="mb-4 mt-5">Product Designer, competitive dancer<br>multidisciplinary artist & fashion junkie.</h1>
+          <h1 class="mb-4 mt-5">Product Designer, & a competitive dancer<br> + fashion junkie.</h1>
         </div>
       </div>
 
