--- a/aboutme.html
+++ b/aboutme.html
@@ -72,7 +72,7 @@
           </p>
 
           <p class="lead">
-             With a good understanding of the full stack developement cycle, I enjoy the challenge of balancing effective and lean design with a layput which is actionable & feasible. Hopefully I can help bring your product to life in both a aesthetic & effective manner!
+             With a good understanding of the full stack developement cycle, I enjoy the challenge of balancing effective and lean design with a layout which is actionable & feasible. Hopefully I can help bring your product to life in both a aesthetic & effective manner!
           </p>
 
 
